Terraform/security.tf
# Security Group: SSH aur K8s Services ke liye ports open karna
resource "aws_security_group" "kind_sg" {
  name        = "kind-cluster-sg"
  description = "Allow SSH and HTTP traffic for Kind"

  # SSH access ke liye (Port 22)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Ingress / HTTP test karne ke liye (Port 80)
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # NodePort services test karne ke liye (Port 30000 - 32767)
  ingress {
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Internet access ke liye (Outbound)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
